<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Interface_Login"
    android:orientation="vertical"
    android:background="#F6E4CC">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/login_photo"
            android:layout_weight="0.5" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login_account"
                android:id="@+id/login_account_view" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_account_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login_password"
                android:id="@+id/login_password_view" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/login_password_edit" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember"
                android:id="@+id/login_remember_check" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="店家"
                android:id="@+id/login_seller" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="客戶"
                android:id="@+id/login_customer" />

            <Button
                android:id="@+id/login_enter_click"
                android:text="@string/login_enter"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/buttonshape"
                android:textSize="36px" />

            <Button
                android:id="@+id/login_leave_click"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/buttonshape"
                android:textColor="#FFFFFF"
                android:textSize="36px"
                android:text="@string/login_leave" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/login_farm"
            android:id="@+id/login_farm_click"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:textSize="48px"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/login_crop"
            android:id="@+id/login_crop_click"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:textSize="48px"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/login_resume"
            android:id="@+id/login_resume_click"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:textSize="48px"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/login_store"
            android:id="@+id/login_store_click"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:textSize="48px"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
