<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crop_buy_name"
        android:id="@+id/textView50"
        android:textSize="48px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/customer_buy_name"
        android:textSize="36px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crop_buy_quantity"
        android:id="@+id/textView51"
        android:textSize="48px" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/customer_buy_quantity"
            android:layout_weight="0.6"
            android:textSize="36px"
            android:text="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/customer_buy_increase"
            android:layout_weight="0.2"
            android:background="@drawable/buttonshapeblue" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/customer_buy_decrease"
            android:layout_weight="0.2"
            android:background="@drawable/buttonshapered" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crop_service"
        android:id="@+id/textView53"
        android:textSize="48px"
        android:singleLine="false" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/customer_service_group">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop_service_myself"
                android:id="@+id/customer_service_myself"
                android:textSize="36px" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_one"
                android:id="@+id/customer_service_one"
                android:textSize="36px" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_two"
                android:id="@+id/customer_service_two"
                android:textSize="36px" />

        </RadioGroup>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crop_service_address"
        android:id="@+id/textView54" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/customer_service_address" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/click_cancel"
            android:id="@+id/customer_buy_cancel"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshapered"
            android:textSize="48px" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/click_send"
            android:id="@+id/customer_buy_accept"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshapeblue"
            android:textSize="48px" />
    </LinearLayout>

</LinearLayout>