<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#F6E4CC">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_list" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:id="@+id/bank_layout_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bank_name"
            android:id="@+id/textView10"
            android:textSize="48px" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_signer_edit"
            android:textSize="36px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bank_which"
            android:id="@+id/textView34"
            android:textSize="48px" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_which_edit"
            android:textSize="36px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bank_code"
            android:id="@+id/textView33"
            android:textSize="48px" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_code_edit"
            android:textSize="36px"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bank_account"
            android:id="@+id/textView32"
            android:textSize="48px" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bank_account_edit"
            android:layout_gravity="center_horizontal"
            android:textSize="36px"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/click_cancel"
            android:id="@+id/bank_cancel_click"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshapered"
            android:textSize="48px" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/insert"
            android:id="@+id/bank_insert_click"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshapeblue"
            android:textSize="48px" />
    </LinearLayout>
</LinearLayout>
