<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="#F6E4CC"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/insert"
            android:id="@+id/crop_insert_click"
            android:layout_weight="1"
            android:background="@drawable/buttonshapeblue"
            android:textSize="48px" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/modify"
            android:id="@+id/crop_modify_click"
            android:layout_weight="1"
            android:background="@drawable/buttonshapepeach"
            android:textSize="48px" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:id="@+id/crop_delete_click"
            android:layout_weight="1"
            android:background="@drawable/buttonshapered"
            android:textSize="48px" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crop_farm_spn" />

        <ListView
            android:choiceMode="singleChoice"
            android:listSelector="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crop_list_view"
            android:dividerHeight="10px"
            android:divider="#F6E4CC" />
    </LinearLayout>
</LinearLayout>
